website/websites/u64q/code/chameneosredux.1.scala.log

Wed, 19 Mar 2014 02:12:19 GMT

MAKE:
mv chameneosredux.scala chameneosredux.scala
mv: ‘chameneosredux.scala’ and ‘chameneosredux.scala’ are the same file
make: [chameneosredux.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.10.3/bin/scalac -optimise -target:jvm-1.7 chameneosredux.scala
chameneosredux.scala:33: error: value foreach is not a member of object chameneosredux.Color
      Color.foreach(c1 => Color.foreach(c2 => {
            ^
chameneosredux.scala:121: warning: This catches all Throwables. If this is really intended, use `case _ : Throwable` to clear this warning.
    val n = try { args(0).toInt } catch { case _ => 600 }
                                               ^
one warning found
one error found
make: [chameneosredux.scala_run] Error 1 (ignored)
2.76s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.8.0/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.10.3/lib/scala-library.jar:/usr/local/src/scala-2.10.3/lib/akka-actors.jar:/usr/local/src/scala-2.10.3/lib/typesafe-config.jar chameneosredux 60000

PROGRAM FAILED 


PROGRAM OUTPUT:

Error: Could not find or load main class chameneosredux
